Updated naming in tests, simplified parts of the business logic (#66)
* Updated naming in tests, simplified parts of the business logic

* Acted on sonar issues

* Fixed formatting